ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - host: host.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: api-service
                port:
                  number: 80
